--- a/bio.html
+++ b/bio.html
@@ -11,6 +11,22 @@
     <script src="app.js"></script>
 </head>
 <body>
+    <header>
+        <h1>Bio</h1>
+    
+    </header>
+    <div id="topnav">
+        <a href="home.html">Home</a>
+        <a href="bio.html">Bio</a>
+        <a href="work.html">Projects</a>
+        <a href="resume.html">Resume</a>
+    </div>
+    <div id="bioMain">
+        <main>
+            <h3>just a place holder</h3>
+        </main>
+    </div>
+
     
 
 
