--- a/bio.html
+++ b/bio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- css link -->
-    <link rel="stylesheet" href=style.css>
+    <link rel="stylesheet" href=style/style.css>
     <!-- js link  -->
     <script src="app.js"></script>
 </head>
