carasel html/js/css are all done just need to add rest of img and fix any bugs that ocur. 2 paragrafes done on my bio html

--- a/bio.html
+++ b/bio.html
@@ -24,9 +24,14 @@
     <div id="bioMain">
         <main>
             <h3>About Me</h3>
-                <p>
-
+                <p>I am from iowa, i graduated high school at Southeast Polk then joined the navy instead of going to collage. in the navy i gained skills in leader ship, teeam building, comunication, and most importantly i learned to suround my self with people wanting to improve them selfs as well as others.
                 </p>
+                <p2>
+                   i was medicaly discharged and came back home to iowa, from their i went to go join the work force. I started with the elcetrictions trader school at tesdell electric, i stayed on for three more years and dew to lay offs i left. Soon after i astarted working as an erosion controle enginer at my uncles company and gained more leadership skills as well as gained more responsablity after i became a crew lead and driver. 
+                </p2>
+                <p3>
+                    
+                </p3>
         </main>
     </div>
 
