--- a/bio.html
+++ b/bio.html
@@ -27,10 +27,10 @@
                 <p>I am from iowa, i graduated high school at Southeast Polk then joined the navy instead of going to collage. in the navy i gained skills in leader ship, teeam building, comunication, and most importantly i learned to suround my self with people wanting to improve them selfs as well as others.
                 </p>
                 <p2>
-                   i was medicaly discharged and came back home to iowa, from their i went to go join the work force. I started with the elcetrictions trader school at tesdell electric, i stayed on for three more years and dew to lay offs i left. Soon after i astarted working as an erosion controle enginer at my uncles company and gained more leadership skills as well as gained more responsablity after i became a crew lead and driver. 
+                   i was medicaly discharged and came back home to iowa, from their i went to go join the work force. I started with the elcetrictions trader school at tesdell electric, i stayed on for three more years and dew to lay offs i left. Soon after i started working as an erosion controle enginer at my uncles company and gained more leadership skills as well as gained more responsablity after i became a crew lead and driver. 
                 </p2>
                 <p3>
-                    
+                    Shorty after i got my CDL for work i bought a hosue, and more importantly i got my dog a blue healer named Sora. it was thanks to sora i got a second date with my now wife, this got me to thinking i needed to set an exsample for my futer kids like all of the people who did the same for me. This lead to my disition to join the best imursive boot camp around General Asembly to start my carrer as a software enginer.
                 </p3>
         </main>
     </div>
@@ -54,8 +54,7 @@
     
     </div>
 <!-- boot strap script -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 </body>
 </html>
