--- a/bio.html
+++ b/bio.html
@@ -49,9 +49,9 @@
 
 
     <div id="botnav">
-        <a href="http://www.linkedin.com/in/bailey-rechkemmer-35b3a0261">Linkedin account</a>
+        <!-- <a href="http://www.linkedin.com/in/bailey-rechkemmer-35b3a0261">Linkedin account</a>
         <a href="http://www.github.com/Baileyrechkemmr">Baileys github</a>
-    
+     -->
     </div>
 <!-- boot strap script -->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
