--- a/bio.html
+++ b/bio.html
@@ -15,13 +15,13 @@
         <h1>Bio</h1>
     
     </header>
-    <div id="topnav">
+    <div class="topnav">
         <a href="home.html">Home</a>
         <a href="bio.html">Bio</a>
         <a href="work.html">Projects</a>
         <a href="resume.html">Resume</a>
     </div>
-    <div id="bioMain">
+    <div class="bioMain">
         <main>
             <h3>About Me</h3>
                 <p>I am from iowa, i graduated high school at Southeast Polk then joined the navy instead of going to collage. in the navy i gained skills in leader ship, teeam building, comunication, and most importantly i learned to suround my self with people wanting to improve them selfs as well as others.
