--- a/bio.html
+++ b/bio.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href=style/style.css>
     <!-- js link  -->
     <script src="app.js"></script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <header>
@@ -48,7 +50,7 @@
 
 
 
-    <div id="botnav">
+    <div class="botnav">
         <a href="http://www.linkedin.com/in/bailey-rechkemmer-35b3a0261">Linkedin account</a>
         <a href="http://www.github.com/Baileyrechkemmr">Baileys github</a>
     
