--- a/bio.html
+++ b/bio.html
@@ -26,13 +26,21 @@
     <div class="bioMain">
         <main>
             <h3>About Me</h3>
-                <p>I am from iowa, i graduated high school at Southeast Polk then joined the navy instead of going to collage. in the navy i gained skills in leader ship, teeam building, comunication, and most importantly i learned to suround my self with people wanting to improve them selfs as well as others.
+                <p>I am from Iowa, I graduated high school at Southeast Polk then joined the navy instead of going to collage. in the navy
+                I gained skills in leadership, team building, communication, and most importantly I learned to surround myself with
+                people wanting to improve themselves as well as others.
                 </p><br>
                 <p>
-                   i was medicaly discharged and came back home to iowa, from their i went to go join the work force. I started with the elcetrictions trade school  tesdell electric, i stayed on for three more years and dew to lay offs i left. Soon after i started working as an erosion controle enginer at my uncles company and gained more leadership skills as well as gained more responsablity after i became a crew lead and driver. 
+                I was medically discharged and came back home to Iowa, from there I went to join the workforce. I started with the
+                electricians trade school tesdell electric, i stayed on for three more years and dew to lay offs i left. Soon after I
+                started working as an erosion control engineer at my uncle's company and gained more leadership skills as well as gained
+                more responsibility after I became a crew lead and driver.
                 </p><br>
                 <p>
-                    Shorty after i got my CDL for work i bought a hosue, and more importantly i got my dog a blue healer named Sora. it was thanks to sora i got a second date with my now wife, this got me to thinking i needed to set an exsample for my futer kids like all of the people who did the same for me. This lead to my disition to join the best imursive boot camp around General Asembly to start my carrer as a software enginer.
+                    Shortly after i got my CDL for work i bought a house, and more importantly i got my dog a blue heeler named Sora. It was
+                    thanks to Sora that I got a second date with my now wife. This got me thinking I needed to set an example for my future
+                    kids like all of the people who did the same for me. This led to my decision to join the best immersive boot camp
+                    around, General Assembly, to start my career as a software engineer.
                 </p>
         </main>
     </div>
