--- a/bio.html
+++ b/bio.html
@@ -26,19 +26,19 @@
     <div class="bioMain">
         <main>
             <h3>About Me</h3>
-                <p>I am from Iowa, I graduated high school at Southeast Polk then joined the navy instead of going to college. in the navy
+                <p id="elementText1">I am from Iowa, I graduated high school at Southeast Polk then joined the navy instead of going to college. in the navy
                 I gained skills in leadership, team building, communication, and most importantly I learned to surround myself with
                 people wanting to improve themselves as well as others.
 
                 </p><br>
-                <p>
+                <p id="elementText1">
                 I was medically discharged and came back home to Iowa, from there I went to join the workforce. I started with the
                 electricians trade school tesdell electric, i stayed on for three more years and dew to lay offs i left. Soon after I
                 started working as an erosion control engineer at my uncle's company and gained more leadership skills as well as gained
                 more responsibility after I became a crew lead and driver.
 
                 </p><br>
-                <p>
+                <p id="elementText1">
                     Shortly after I got my CDL for work I bought a house, and more importantly I got my dog a blue heeler named Sora. It was
                     Thanks to Sora, I got a second date with my now wife. This got me thinking I needed to set an example for my future
                     kids like all of the people who did the same for me. This led to my decision to join the best immersive boot camp
